shared/HomeScreen/HomeScreen.module.css
/*@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;700&display=swap');*/
/*@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap');*/
/*.app {*/
/*  min-height: 100vh;*/
/*  display: flex;*/
/*  flex-direction: column;*/
/**/
/*  font-family: 'Oswald', sans-serif;*/
/*  font-weight: 400;*/
/*}*/

.hero {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgb(0, 0, 0);
  background: -moz-linear-gradient(
    145deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(255, 255, 255, 0.5966592427616926) 100%
  );
  background: -webkit-linear-gradient(
    145deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(255, 255, 255, 0.5966592427616926) 100%
  );
  background: linear-gradient(
    145deg,
    rgba(0, 0, 0, 1) 0%,
    rgba(255, 255, 255, 0.6966592427616926) 100%
  );
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#ffffff",GradientType=1);
  color: white;
  padding: 2rem;
  text-align: center;
}

.heroContent {
  max-width: var(--wide);
}

.heroTitle {
  font-size: 3rem;
  font-weight: 700; /* Manrope Bold */
  /*margin-bottom: 1.5rem;*/
  line-height: 1.2;
  letter-spacing: -0.5px; /* Slightly tighter for modernity */
}

.heroSubtitle {
  font-size: 2.11vh;
  font-weight: 400; /* Manrope Regular */
  /*margin-bottom: 2.5rem;*/
  opacity: 0.9;
  line-height: 1.6;
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;

text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.6); /* Smoother */


}

.heroButton {
  border-radius: 50px;
  cursor: pointer;
  transition: all 0.3s ease;
  --button-color: gainsboro;
  --single-color: #F0F0F0;
  border: 2.7px solid black;
  background-color: var(--button-color);
  margin: 2rem 0 1rem 0;
  padding: 0 1rem 0 1rem ;

}

.heroButton > h1 {
  font-size: small;
}

.heroButton:hover {
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
  background: rgb(131,58,180);
  background: linear-gradient(150deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); 
  transform:scale(1.05);
  cursor:pointer;
}

.presentation {
  display: grid;
  grid-template-columns: 1fr 0.5fr;
  /*grid-template-rows: auto;*/
  justify-content: center;
  background-color: dimgray;
  border-radius: 15px;
}

.deeds {
  display: flex;
  /*background-color: dimgray;*/
  border-radius: 15px;
  justify-content: center;


}

.presentation > div > div >   img {
  filter: drop-shadow(20px 35px 4px black);
}





@media only screen and (orientation: portrait) {
  .presentation {
    display: flex !important;
    flex-direction: column !important;
    row-gap: 10px;
    
  }

  .deeds {
    display: flex !important;
    flex-direction: column !important;
    row-gap: 10px;
  }

}


@media only screen and (max-width: 430px) {
  .heroContent { width: 428px; }
}
@media only screen and (max-width: 414px) {
  .heroContent { width: 414px; }
}
@media only screen and (max-width: 412px) {
  .heroContent { width: 412px; }
}
@media only screen and (max-width: 390px) {
  .heroContent { width: 390px; }
}
@media only screen and (max-width: 384px) {
  .heroContent { width: 384px; }
}
@media only screen and (max-width: 375px) {
  .heroContent { width: 375px; }
}
@media only screen and (max-width: 360px) {
  .heroContent { width: 360px; }
}
@media only screen and (max-width: 344px) {
  .heroContent { width: 344px; }
}

  /*--s1:360px;*/
  /*--s2:375px;*/
  /*--s3:384px;*/
  /*--s4:390px;*/
  /*--s5:412px;*/
  /*--s6:414px;*/
  /*--s7:428px;*/

